@@ -1,3 +1,4 @@
+	* Support to bind outgoing connections to specific ports
 	* Disk cache support.
 	* New, more memory efficient, piece picker with sequential download
 	  support (instead of the more complicated sequential download threshold).
